--- a/Project1_Digital_Business_Card/index.html
+++ b/Project1_Digital_Business_Card/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="card">
-        <img src="images/profile.jpg" alt="Profile Photo" class="profile-img">
+        <img src="images/Screenshot 2025-08-01 125359.png" alt="Profile Photo" class="profile-img">
         <h1>Barath C G</h1>
         <h3>Web Developer</h3>
         <p>Email: <a href="mailto:barath.cg@btech.christuniversity.in">barath.cg@btech.christuniversity.in</a></p>
