--- a/Project1_Digital_Business_Card/index.html
+++ b/Project1_Digital_Business_Card/index.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Business Card</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Digital Business Cards</title>
 </head>
 <body>
-
-    <div class="card">
-        <img src="images/Screenshot 2025-08-01 125359.png" alt="Profile Photo" class="profile-img">
+    <div>
+        <img src="images/Screenshot 2025-08-01 125359.png" alt="Barath C G" width="120">
         <h1>Barath C G</h1>
         <h3>Web Developer</h3>
         <p>Email: <a href="mailto:barath.cg@btech.christuniversity.in">barath.cg@btech.christuniversity.in</a></p>
-        <div class="social-links">
-            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+        <p>
+            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> |
             <a href="https://github.com/" target="_blank">GitHub</a>
-        </div>
+        </p>
+    </div>
+    <hr>
+    <div>
+        <img src="images/Screenshot 2025-07-31 172828.png" alt="Rishi Renjith" width="120">
+        <h1>Rishi Renjith</h1>
+        <h3>UI/UX Designer</h3>
+        <p>Email: <a href="mailto:rishi.renjith@btech.christuniversity.in">rishi.renjith@btech.christuniversity.in</a></p>
+        <p>
+            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/" target="_blank">GitHub</a>
+        </p>
+    </div>
+    <hr>
+    <div>
+        <img src="images/Screenshot 2025-07-31 172822.png" alt="Sri Ramanarayana" width="120">
+        <h1>Sri Ramanarayana</h1>
+        <h3>Full Stack Enthusiast</h3>
+        <p>Email: <a href="mailto:sri.ramanarayana@btech.christuniversity.in">sri.ramanarayana@btech.christuniversity.in</a></p>
+        <p>
+            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/" target="_blank">GitHub</a>
+        </p>
     </div>
 
 </body>
