--- a/Project_2_Event_Registration_Page/index.html
+++ b/Project_2_Event_Registration_Page/index.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project 2 - Event Registration Page</title>
+</head>
+<body>
 
+    <header>
+        <h1>Event Registration</h1>
+        <p>Join us for an amazing event experience!</p>
+    </header>
+
+    <main>
+        <section class="participant-form">
+            <h2>Barath C G</h2>
+            <form>
+                <label>Full Name</label>
+                <input type="text" placeholder="Barath C G" required>
+
+                <label>Email</label>
+                <input type="email" placeholder="barath.cg@btech.christuniversity.in" required>
+
+                <label>Phone</label>
+                <input type="tel" placeholder="1234567890" required>
+
+                <label>Event</label>
+                <select>
+                    <option>Design Bootcamp</option>
+                    <option>UI/UX Workshop</option>
+                    <option>Web Developer</option>
+                </select>
+
+                <button type="submit">Register</button>
+            </form>
+        </section>
+        <section class="participant-form">
+            <h2>Rishi Renjith</h2>
+            <form>
+                <label>Full Name</label>
+                <input type="text" placeholder="Rishi Renjith" required>
+
+                <label>Email</label>
+                <input type="email" placeholder="rishi.renjith@btech.christuniversity.in" required>
+
+                <label>Phone</label>
+                <input type="tel" placeholder="1234567890" required>
+
+                <label>Event</label>
+                <select>
+                    <option>Design Bootcamp</option>
+                    <option>UI/UX Workshop</option>
+                    <option>Web Developer</option>
+                </select>
+
+                <button type="submit">Register</button>
+            </form>
+        </section>
+        <section class="participant-form">
+            <h2>Sri Ramanarayana</h2>
+            <form>
+                <label>Full Name</label>
+                <input type="text" placeholder="Sri Ramanarayana" required>
+
+                <label>Email</label>
+                <input type="email" placeholder="sri.ramanarayana@btech.christuniversity.in" required>
+
+                <label>Phone</label>
+                <input type="tel" placeholder="1234567890" required>
+
+                <label>Event</label>
+                <select>
+                    <option>Design Bootcamp</option>
+                    <option>UI/UX Workshop</option>
+                    <option>Web Developer</option>
+                </select>
+
+                <button type="submit">Register</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Event Registration. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
